Bug 437047 - cannot paste data from other application if target is not text/plain or html